Mise à jour du bundle

--- a/app/Resources/views/materialize/layout.html.twig
+++ b/app/Resources/views/materialize/layout.html.twig
@@ -13,11 +13,10 @@
   </head>
   <body>
     <nav class="light-blue lighten-1" role="navigation">
-      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Station ski</a>
+      <div class="nav-wrapper container"><a id="logo-container" href="{{ path('index_action') }}" class="brand-logo">CriticSki</a>
         <ul class="right hide-on-med-and-down">
           <li><a href="{{ path('list_action') }}">Liste des stations</a></li>
         </ul>
-
         <ul id="nav-mobile" class="side-nav">
           <li><a href="{{ path('list_action') }}">Liste des stations</a></li>
         </ul>
