--- a/src/SkiBundle/Resources/views/Main/list.html.twig
+++ b/src/SkiBundle/Resources/views/Main/list.html.twig
@@ -7,7 +7,7 @@
       {% for station in stations %}
           <li><a href="{{ path('detail_action', {'stationId': station.id}) }}">{{ station.name }}</a></li>
       {% else %}
-          Aucun avis.
+          Aucun station.
       {% endfor %}
   <ul>
 {% endblock %}
