--- a/src/SkiBundle/Resources/views/Main/detail.html.twig
+++ b/src/SkiBundle/Resources/views/Main/detail.html.twig
@@ -2,10 +2,33 @@
 {% block title %}Liste des avis{% endblock %}
 
 {% block content %}
-  <h3>Liste des avis pour {{ station.name }}</h3>
-  {% for review in station.reviews %}
-    Auteur: <b>{{ review.user }}</b><br>
-    Note: <b>{{ review.notation }}/5</b><br>
-    <b>{{ review.review }}</b><hr>
-  {% endfor %}
+  <div class="row">
+    <div class="col s12"><h3>{{ station.name }}</h3></div>
+    <div class="col s6">
+      <div class="card">
+        <div class="card-image">
+          <img src="{{ asset('img/' ~ station.image) }}">
+          <!--<span class="card-title">Card Title</span>-->
+        </div>
+        <div class="card-content">
+          <p>{{ station.description }}</p>
+        </div>
+        <!--<div class="card-action">
+          <a href="#">This is a link</a>
+        </div>-->
+      </div>
+    </div>
+    <div class="col s6">
+      <ul class="collection">
+        {% for review in reviews %}
+          <li class="collection-item avatar">
+            <img src="{{ asset('img/user.png') }}" alt="" class="circle">
+            <span class="title">Prénom N. ({{ review.userId }})</span>
+            <p>{{ review.comment }}</p>
+            <a href="#!" class="secondary-content">{{ review.notation }}/5 <!--<i class="material-icons">grade</i>--></a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 {% endblock %}
