--- a/src/SkiBundle/Resources/views/Main/list.html.twig
+++ b/src/SkiBundle/Resources/views/Main/list.html.twig
@@ -2,12 +2,24 @@
 {% block title %}Liste des stations{% endblock %}
 
 {% block content %}
-  <h3>Liste des stations</h3>
-  <ul>
-      {% for station in stations %}
-          <li><a href="{{ path('detail_action', {'stationId': station.id}) }}">{{ station.name }}</a></li>
-      {% else %}
-          Aucun station.
-      {% endfor %}
-  <ul>
+  <div class="row">
+      <!--<div class="col s12"><h3>Liste des stations</h3></div>-->
+      <ul>
+          {% for station in stations %}
+            <div class="col s3">
+                <a href="{{ path('detail_action', {'stationId': station.id}) }}">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                      <img src="{{ asset('bundles/ski/img/station/' ~ station.image) }}" width="415" height="185" class="activator">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title grey-text text-darken-4">{{ station.name }}</span>
+                    </div>
+                </div></a>
+            </div>
+          {% else %}
+              <div class="col s12">Aucun station.</div>
+          {% endfor %}
+      <ul>
+  </div>
 {% endblock %}
