--- a/app/Resources/views/materialize/layout.html.twig
+++ b/app/Resources/views/materialize/layout.html.twig
@@ -21,18 +21,18 @@
         <ul class="right hide-on-med-and-down">
           <li><a href="{{ path('list_action') }}"><i class="material-icons left">view_list</i> Liste des stations</a></li>
           <li>
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+          {% if is_granted('IS_AUTHENTICATED_FULLY') %}
               <ul id="dropdown1" class="dropdown-content">
                 <li><a href="{{ path('account') }}">Mon compte</a></li>
                 <li><a href="#!">Mes avis</a></li>
                 <li class="divider"></li>
-                <li><a href="{{ path('logout') }}">Déconnexion</a></li>
+                <li><a href="{{ path('logout') }}"><i class="material-icons left">power_settings_new</i>Déconnexion</a></li>
               </ul>
 
               <a class="dropdown-button" href="#!" data-activates="dropdown1">
                 <i class="material-icons left">account_circle</i>{{ app.user.firstname }} {{ app.user.lastname|upper }}<i class="material-icons right">arrow_drop_down</i>
               </a>
-            {% else %}
+          {% else %}
               <ul id="dropdown1" class="dropdown-content">
                 <li><a href="{{ path('login') }}">Connexion</a></li>
                 <li><a href="{{ path('register') }}">Créer un compte</a></li>
@@ -41,8 +41,12 @@
               <a class="dropdown-button" href="#!" data-activates="dropdown1">
                 <i class="material-icons left">account_circle</i>Connexion<i class="material-icons right">arrow_drop_down</i>
               </a>
-            {% endif %}
+          {% endif %}
           </li>
+
+          {% if is_granted('ROLE_ADMIN') %}
+              <li><a href="{{ path('admin') }}"><i class="material-icons left">desktop_windows</i> Administration</a></li>
+          {% endif %}
 
         </ul>
 
