--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
   <div class="row">
       <h4>Mon compte</h4>
       <p>Bienvenue sur votre espace personnel.</p>
-      <div class="col s6">
+      <div class="col l6">
           <div class="card">
             <div class="card-content">
               <span class="card-title">Mes informations</span>
@@ -16,27 +16,43 @@
             </div>
           </div>
       </div>
-      <div class="col s6">
+      <div class="col l6">
           <div class="card">
-            <div class="card-content">
-                <span class="card-title">Mon avatar</span>
-                <!--<div class="col s4">-->
-                    <img src="{{ asset('bundles/ski/img/avatars/' ~ app.user.avatar) }}" width="150px" height="150px" class="circle">
-                <!--</div>
-                <div class="col s8">-->
-                    <form action="#">
-                      <div class="file-field input-field">
-                        <div class="btn">
-                          <span>Parcourir</span>
-                          <input type="file" multiple>
-                        </div>
-                        <div class="file-path-wrapper">
-                          <input class="file-path validate" type="text" placeholder="Sélectionnez un fichier">
-                        </div>
-                      </div>
-                    </form>
-                <!--</div>-->
-            </div>
+              <div class="card-content">
+                  <span class="card-title">Mon avatar</span>
+                  <img src="{{ asset('bundles/ski/img/avatars/' ~ app.user.avatar) }}" width="150px" height="150px" class="circle">
+
+                  {{ form_start(form, {'attr': {'id': 'avatarForm'}}) }}
+
+                  <div class="file-field input-field">
+                    <div class="btn">
+                      <span>Parcourir</span>
+                      {{ form_widget(form.avatarFile) }}
+                    </div>
+                    <div class="file-path-wrapper">
+                      <input class="file-path validate" type="text" placeholder="Format JPEG, PNG ou GIF. Max 5MB.">
+                    </div>
+                  </div>
+
+                  {{ form_end(form) }}
+
+                  <script>
+                      var form = document.getElementById('avatarForm');
+                      var input = document.getElementById('avatar_avatarFile');
+                      var change_running = false;
+
+                      input.addEventListener('change', function(){
+                          if(!change_running){
+                              setTimeout(function(){
+                                  change_running = true;
+                                  form.submit();
+                                  change_running = false;
+                              }, 300);
+                          }
+                      });
+                  </script>
+                  
+              </div>
           </div>
       </div>
   </div>
