Login & register pages update

--- a/src/UserBundle/Resources/views/Security/register.html.twig
+++ b/src/UserBundle/Resources/views/Security/register.html.twig
@@ -46,6 +46,7 @@
 
       {{ form_rest(form) }}
       {{ form_end(form) }}
+      Vous avez déjà un compte? <a href="{{ path('login') }}">Connectez-vous</a>.
   </div>
   <script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
