--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -23,5 +23,6 @@
           </div>
           <button type="submit" class="modal-action waves-effect waves-green btn">Connexion</button>
       </form>
+      Pas encore de compte? <a href="{{ path('register') }}">Crééz-en un</a>.
   </div>
 {% endblock %}
