--- a/src/SkiBundle/Resources/views/Main/index.html.twig
+++ b/src/SkiBundle/Resources/views/Main/index.html.twig
@@ -10,13 +10,13 @@
         <a href="{{ path('list_action') }}" class="btn waves-effect white black-text">Liste des stations</a>
       </div>
       <div class="carousel-item" href="#">
-          <img src="{{ asset('bundles/ski/img/slides/1.jpg') }}" width="1360px" height="570px">
+          <img src="{{ asset('bundles/ski/img/slides/1.jpg') }}">
       </div>
       <div class="carousel-item" href="#">
-          <img src="{{ asset('bundles/ski/img/slides/2.jpg') }}" width="1360px" height="570px">
+          <img src="{{ asset('bundles/ski/img/slides/2.jpg') }}">
       </div>
       <div class="carousel-item" href="#">
-          <img src="{{ asset('bundles/ski/img/slides/3.jpg') }}" width="1360px" height="570px">
+          <img src="{{ asset('bundles/ski/img/slides/3.jpg') }}">
       </div>
     </div>
 
