--- a/src/SkiBundle/Resources/views/Exception/error404.html.twig
+++ b/src/SkiBundle/Resources/views/Exception/error404.html.twig
@@ -3,6 +3,7 @@
 
 {% block content %}
   <center>
+    <img src="{{ asset('bundles/ski/img/404.gif') }}" class="responsive-img">
     <h3>Erreur 404</h3>
     <p>La page que vous recherchez est introuvable.</p>
   </center>
