--- a/src/SkiBundle/Resources/views/Main/detail.html.twig
+++ b/src/SkiBundle/Resources/views/Main/detail.html.twig
@@ -3,8 +3,8 @@
 
 {% block content %}
   <div class="row">
-    <div class="col s12"><h3>{{ station.name }}</h3></div>
-    <div class="col s6">
+    <div class="col l12"><h3>{{ station.name }}</h3></div>
+    <div class="col l6">
       <h5>La station</h5>
       <div class="card">
         <div class="card-image">
@@ -34,10 +34,15 @@
         </div>
       </div>
       <div class="map-responsive">
-          {{ map|raw }}
+          <iframe
+              width="600"
+              height="450"
+              frameborder="0" style="border:0"
+              src="{{ mapurl }}" allowfullscreen>
+          </iframe>
       </div>
     </div>
-    <div class="col s6">
+    <div class="col l6">
       <h5>Avis ({{ reviews|length }})</h5>
 
       {% if is_granted('IS_AUTHENTICATED_FULLY') %}
